--- a/test.html
+++ b/test.html
@@ -24,6 +24,7 @@ function create() {
   game.stage.backgroundColor = '#700';
   //text = game.add.bitmapText(20, 20, 'joy','Bitmap Fonts!',18);
   text = game.add.bitmapText(20, 20, 'joy','BITMAP FONTS!', 6);
+  text.tint = 0x000077;
 }
 
 function update() {
