--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title>phaser</title>
 <script src="phaser-examples/examples/_site/js/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="phaser-examples/examples/_site/js/phaser.js"></script>
+<script src="phaser/build/phaser.js"></script>
 <script>
 var game = new Phaser.Game(320, 240, Phaser.AUTO, '', { preload: preload, create: create, update: update }, false, false);
 
