Compile text assets into json

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@ function create() {
 
 function update() {
     //text.setText('Bitmap Fonts!\nx: ' + Math.round(game.input.x) + ' y: ' + Math.round(game.input.y));
-    text.setText('BITMAP FONTS!\nX: ' + Math.round(game.input.x) + ' Y: ' + Math.round(game.input.y));
+    text.setText('Ü BITMAP FONTS!\nX: ' + Math.round(game.input.x) + ' Y: ' + Math.round(game.input.y));
 }
 
 function resize(scale, parentBounds)
