--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <title>phaser</title>
-<script src="phaser-examples/examples/_site/js/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="phaser/build/phaser.js"></script>
+<script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="js/phaser.js"></script>
 <script>
 function resize(scale, parentBounds)
 {
